[gd_scene load_steps=44 format=3 uid="uid://bhgx4y0shwsk0"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_bfu67"]
[ext_resource type="Texture2D" uid="uid://b0sasiyvd0yjb" path="res://scenes/player/player-Sheet.png" id="1_gos3f"]
[ext_resource type="Script" path="res://scenes/player/items/collect_area.gd" id="2_m8177"]
[ext_resource type="Script" path="res://common/state_machine/state_machine.gd" id="2_p88nr"]
[ext_resource type="Script" path="res://scenes/player/state_machine/idle_state.gd" id="3_he8yt"]
[ext_resource type="Script" path="res://scenes/player/state_machine/walk_state.gd" id="4_wg5m1"]
[ext_resource type="Script" path="res://scenes/player/state_machine/jump_state.gd" id="5_mdjhm"]
[ext_resource type="Script" path="res://scenes/player/state_machine/fall_state.gd" id="6_lvw17"]
[ext_resource type="Script" path="res://scenes/player/state_machine/land_state.gd" id="7_hygq8"]
[ext_resource type="Script" path="res://common/sprite_flipper.gd" id="8_81pmy"]
[ext_resource type="Script" path="res://common/state_machine/hit_state.gd" id="8_wr4j5"]
[ext_resource type="Shader" path="res://shaders/hit_flash.gdshader" id="10_1qa48"]
[ext_resource type="Script" path="res://scenes/player/weapon_system.gd" id="10_fowds"]
[ext_resource type="Script" path="res://scenes/player/platform_fall.gd" id="11_vg4do"]
[ext_resource type="Script" path="res://common/hurtbox.gd" id="12_d846u"]
[ext_resource type="Script" path="res://common/health_system.gd" id="13_ct085"]
[ext_resource type="Resource" uid="uid://dw6cwsb4acdh2" path="res://scenes/player/health_stats.tres" id="14_1skyp"]
[ext_resource type="Script" path="res://common/hit_system.gd" id="17_4gyoo"]
[ext_resource type="PackedScene" uid="uid://d025kx0gsvnbp" path="res://scenes/common/hit_audio_player/hit_audio_player.tscn" id="19_x6r1j"]
[ext_resource type="Texture2D" uid="uid://cftruftug6vha" path="res://common/UI/frame.png" id="21_kheck"]
[ext_resource type="Script" path="res://scenes/player/UI/item_displayer.gd" id="22_q7bmo"]
[ext_resource type="Texture2D" uid="uid://cs72hjlkvegm2" path="res://items/gold/gold.png" id="22_w5bkn"]
[ext_resource type="Theme" uid="uid://ce5wghpko8olj" path="res://rogue_main_theme.tres" id="23_h4i07"]
[ext_resource type="AudioStream" uid="uid://c1pg5u6ijb77f" path="res://common/SFX/gold.wav" id="24_ivoyu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_185v6"]
radius = 46.0435

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0r4in"]
size = Vector2(14.5, 23)

[sub_resource type="Animation" id="Animation_qgsb5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mdwlp"]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_xruql"]
resource_name = "fall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_xrmj2"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ifdgv"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 10]
}

[sub_resource type="Animation" id="Animation_d1qx7"]
resource_name = "land"
length = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_71xjv"]
resource_name = "run"
length = 0.75
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_g15wn"]
resource_name = "walk"
length = 0.55
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteFlipper/HandSlot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(7, 5), Vector2(6, 3), Vector2(7, 5), Vector2(8, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccrmi"]
_data = {
"RESET": SubResource("Animation_qgsb5"),
"attack": SubResource("Animation_mdwlp"),
"fall": SubResource("Animation_xruql"),
"idle": SubResource("Animation_xrmj2"),
"jump": SubResource("Animation_ifdgv"),
"land": SubResource("Animation_d1qx7"),
"run": SubResource("Animation_71xjv"),
"walk": SubResource("Animation_g15wn")
}

[sub_resource type="Animation" id="Animation_4mo17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/HandSlot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s7117"]
resource_name = "swing"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/HandSlot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.488692, 2.44346]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fkbb5"]
_data = {
"RESET": SubResource("Animation_4mo17"),
"swing": SubResource("Animation_s7117")
}

[sub_resource type="Animation" id="Animation_rwb4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ge4xg"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteFlipper/Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbvbw"]
_data = {
"RESET": SubResource("Animation_rwb4q"),
"hit_flash": SubResource("Animation_ge4xg")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qjr1j"]
resource_local_to_scene = true
shader = ExtResource("10_1qa48")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxy8p"]
size = Vector2(14, 22)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 16
script = ExtResource("1_bfu67")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("2_m8177")
collect_speed = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
visible = false
shape = SubResource("CircleShape2D_185v6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_0r4in")
one_way_collision_margin = 2.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "debug_label")]
script = ExtResource("2_p88nr")
initial_state = NodePath("Idle")
debug_label = NodePath("../StateDebugLabel")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_he8yt")
stop_speed = 2.0

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("4_wg5m1")
speed = 100.0

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("5_mdjhm")
jump_velocity = -400.0
coyot_time = 0.2
air_move_speed = 100.0

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("6_lvw17")
air_move_speed = 100.0
jump_buffer_time = 0.2

[node name="Land" type="Node" parent="StateMachine"]
script = ExtResource("7_hygq8")

[node name="Hit" type="Node" parent="StateMachine" node_paths=PackedStringArray("default_state")]
script = ExtResource("8_wr4j5")
stop_speed = 2.0
default_state = NodePath("../Idle")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ccrmi")
}

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fkbb5")
}

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jbvbw")
}

[node name="StateDebugLabel" type="Label" parent="."]
visible = false
offset_left = -18.0
offset_top = -33.0
offset_right = 22.0
offset_bottom = -10.0
text = "State"

[node name="SpriteFlipper" type="Marker2D" parent="." node_paths=PackedStringArray("character_body")]
position = Vector2(0, 6)
script = ExtResource("8_81pmy")
character_body = NodePath("..")

[node name="HandSlot" type="Node2D" parent="SpriteFlipper"]
z_index = 19
position = Vector2(7, 5)

[node name="Sprite2D" type="Sprite2D" parent="SpriteFlipper"]
z_index = 20
z_as_relative = false
texture_filter = 1
material = SubResource("ShaderMaterial_qjr1j")
position = Vector2(0, -6)
texture = ExtResource("1_gos3f")
hframes = 5
vframes = 8

[node name="PlatformFall" type="Node2D" parent="."]
script = ExtResource("11_vg4do")

[node name="RayCast2D" type="RayCast2D" parent="PlatformFall"]
position = Vector2(0, 2)
target_position = Vector2(0, 19)
collision_mask = 3

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 64
script = ExtResource("12_d846u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_gxy8p")

[node name="WeaponSystem" type="Node2D" parent="."]
z_index = 19
position = Vector2(12, -1)
script = ExtResource("10_fowds")

[node name="AttackTimer" type="Timer" parent="WeaponSystem"]

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("13_ct085")
health_stats = ExtResource("14_1skyp")

[node name="HitSystem" type="Node" parent="." node_paths=PackedStringArray("hit_flash_animation_player", "hit_audio_stream_player")]
script = ExtResource("17_4gyoo")
hit_flash_animation_player = NodePath("../HitFlashAnimationPlayer")
hit_audio_stream_player = NodePath("HitAudioPlayer")

[node name="HitAudioPlayer" parent="HitSystem" instance=ExtResource("19_x6r1j")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="Coins" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.494
anchor_right = 0.503434
anchor_bottom = 0.006
offset_left = -93.088
offset_top = 4.0
offset_right = -10.9561
offset_bottom = 50.112
grow_horizontal = 0
size_flags_horizontal = 3
texture = ExtResource("21_kheck")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 30
patch_margin_top = 19
patch_margin_right = 30
patch_margin_bottom = 31
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("22_q7bmo")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Coins"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Coins/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Coins/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(16, 3)
layout_mode = 2
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Coins/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 3.545)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("22_w5bkn")
expand_mode = 2

[node name="CoinLabel" type="RichTextLabel" parent="CanvasLayer/Coins/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50.225, 21.185)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("23_h4i07")
theme_override_colors/default_color = Color(0.925353, 0.925353, 0.925353, 1)
theme_override_font_sizes/normal_font_size = 21
text = "9999"
scroll_active = false
autowrap_mode = 1
text_direction = 2

[node name="CoinAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_ivoyu")
bus = &"SFX"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -30)
zoom = Vector2(4, 4)
process_callback = 0
position_smoothing_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.32
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="collected" from="CollectArea" to="." method="_on_collect_area_collected"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Land" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="WeaponSystem/AttackTimer" to="WeaponSystem" method="_on_attack_timer_timeout"]
